--- a/package.json
+++ b/package.json
@@ -8,12 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@hookform/resolvers": "^2.8.5",
+    "@material-tailwind/react": "^0.3.4",
+    "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.24.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-google-charts": "^3.0.15",
+    "react-notifications": "^1.7.3",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "redux-devtools-extension": "^2.13.9",
+    "tailwindcss": "^3.0.5"
   }
 }
